--- a/index.html
+++ b/index.html
@@ -6,26 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Js</title>
+    <title>Jordan Mitchell</title>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <!--fontawesome-->
-    <!--owlcarosel--A#>
-    <!--googlefonts-->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-
 <div class="container-fluid">
   <div class="row">
-<div class="col-lg-6">
-  <h1>asdas</h1>
+<div class="col-md-6">
+  <h1>JS practice</h1>
 </div>
-<div class="col-lg-6">
-  <h1>asdas</h1>
+<div class="col-md-6">
+  <h1>JS practice</h1>
 </div>
 </div>
 </div>
