--- a/index.html
+++ b/index.html
@@ -9,32 +9,201 @@
     <title>Jordan Mitchell</title>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <!--fontawesome-->
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-<div class="container-fluid">
-  <div class="row">
-<div class="col-md-6">
-  <h1>JS practice</h1>
-</div>
-<div class="col-md-6">
-  <h1>JS practice</h1>
-</div>
-</div>
-</div>
+
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#example-navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+                <a class="navbar-brand" href="#home">Jordan Mitchell</a>
+            </div>
+
+            <!-- Collect the nav links for toggling -->
+            <div class="collapse navbar-collapse" id="example-navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#home">HOME</a>
+                    </li>
+                    <li>
+                        <a href="#who">WHO</a>
+                    </li>
+                    <li>
+                        <a href="#gallery">GALLERY</a>
+                    </li>
+                    <li>
+                        <a href="#contact">CONTACT</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
 
+    <div class="container-fluid top">
+        <div class="row">
+            <div id="home" class="col-sm-12 hero">
+                <img class="img-responsive logo" src="logo.png">
+            </div>
+        </div>
 
+        <div class="row whorow">
+            <div class="col-md-8 whoblock">
+                <h1 id="who" class="whoh1">Who</h1>
+                <p class="whop">My name is Jordan Mitchell. I am a front-end developer currently studying at <a href="https://www.austincodingacademy.com/">Austin Coding Academy.</a> I have extensive experience in design and illustration. I am driven to combine elements
+                    of design, with optimal programming.  Excellent understanding of Javascript and Jquery.</p>
+            </div>
+            <div class="col-md-4 codeimg">
+                <img class="img-responsive web1" src="web1.png">
+            </div>
+        </div>
+        <div class="row">
+          <div class=" col-md-8 javascript">
+            <h1 id="who" class="whoh1">Javascript Projects</h1>
+            <a href= "http://127.0.0.1:62194/apps/07jquery-tic-tac-toe/">
+            <img class="imgmid img-responsive" src= "tictactoe.png">
+          </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="row">
+                    <div class="col-md-4 col-sm-6 colmid">
+                        <img class="imgmid img-responsive" src="css3-logo.png">
+                    </div>
+                    <div class="col-md-4 col-sm-6 colmid">
+                        <img class="imgmid img-responsive" src="HTML5_Logo_512.png">
+                    </div>
+                    <div class="col-md-4 col-sm-12 colmid">
+                        <img class="imgmid img-responsive" src="jslogo.png">
+                    </div>
 
-    <script src="alert.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+                </div>
+            </div>
+        </div>
+
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div id="gallery" class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="car1.jpg">
+                </div>
+
+                <div class="item">
+                    <img src="car2.jpg">
+                </div>
+
+                <div class="item">
+                    <img src="car3.jpg">
+                </div>
+
+                <div class="item">
+                    <img src="car4.jpg">
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="row">
+                    <div class="col-md-4 col-sm-12 colmidbottom">
+                        <h1 class="socialh1">Github </h1>
+                        <a href="https://github.com/mordanjitchell" target="_blank">
+                            <img class="imgmid img-responsive" src="github.png">
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-12  colmidbottom">
+                        <h1 class="socialh13">Linked in</h1>
+                        <a href="https://www.linkedin.com/in/jordan-mitchell-84861985" target="_blank">
+                            <img class="imgmid img-responsive" src="linkedinlogo.png">
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-12 colmidbottom">
+                        <h1 class="socialh12">Instagram </h1>
+                        <a href="https://www.instagram.com/jordanmitchelltattoo/?hl=en" target="_blank">
+                            <img class="imgmid img-responsive" src="instagram.png">
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!--form -->
+        <div class="row">
+            <div id="contact" class="col-sm-12 contactblock">
+                <div class="container-fluid formblock">
+                    <div class="form-group row">
+                        <div class="col-sm-12 col-form-control">
+                            <div class="col-md-offset-3 col-md-6 col-sm-12">
+                                <div class="panel panel-default">
+                                    <div class="panel-heading">
+                                        <h3 class="panel-title"><i class="fa fa-envelope"></i> CONTACT</h3>
+                                    </div>
+                                </div>
+                                <form action="https://docs.google.com/forms/d/e/1FAIpQLSe3sDAyYjM-PzblDekU6jeBg4jAVngyXdvyIaFEuPiboGOW1Q/formResponse" target="_self" method="POST">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Email" aria-describedby="i.desc.1136068272 i.err.1136068272" name="entry.1094703442" value="" dir="auto" data-initial-dir="auto" data-initial-value=""
+                                            placeholder="example@gmail.com">
+                                            <input type="text" class="form-control" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Name" aria-describedby="i.desc.1254863623 i.err.1254863623" name="entry.303918152" value="" dir="auto" data-initial-dir="auto" data-initial-value="" placeholder="Name">
+                                            <input type="text" class="form-control" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Phone Number" aria-describedby="i.desc.1884414053 i.err.1884414053" name="entry.1780696379" value="" dir="auto" data-initial-dir="auto" data-initial-value=""
+                                                placeholder="Phone Number">
+                                                <div class="form-group">
+                                                    <label for="exampleTextarea"></label>
+                                                    <textarea jsname="YPqjbf" class="form-control" rows="5" tabindex="0" aria-label="Comments" jscontroller="gZjhIf" jsaction="input:Lg5SV;ti6hGc:XMgOHc;rcuQ6b:WYd;" name="entry.354535259" dir="auto" data-initial-dir="auto" data-initial-value="" placeholder="Comments"></textarea>
+                                                </div>
+                                                <input type="hidden" name="fvv" value="1">
+                                                <input type="hidden" name="draftResponse" value="[,,&quot;215932545032260199&quot;]">
+                                                <input type="hidden" name="pageHistory" value="0">
+                                                <input type="hidden" name="fbzx" value="215932545032260199">
+                                                <input id="submitbutton" type="submit" name="submit" value="Submit" class="btn btn-default btn-lg btn-block btngreen">
+                                </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 bgmap map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13783.520847398782!2d-97.7405441!3d30.2689941!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3c7ccf742ba7769d!2sCapital+Factory!5e0!3m2!1sen!2sus!4v1475112347036" width="70%" height="300px"
+                    frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js">
+</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="alert.js"></script>
 </body>
 
 </html>
