--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             </div>
         </div>
         <div class="row">
-          <div class=" col-md-8 javascript">
-            <h1 id="who" class="whoh1">Javascript Projects</h1>
-            <a href= "http://127.0.0.1:62194/apps/07jquery-tic-tac-toe/">
+          <div class=" col-md-12 javascript">
+            <h1 id="who" class="jsh1">Javascript Projects</h1>
+            <a href= "tictacindex.html">
             <img class="imgmid img-responsive" src= "tictactoe.png">
           </a>
             </div>
