--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-                <a class="navbar-brand" href="#home">Jordan Mitchell</a>
+                <a class="navbar-brand" href="#home"> </a>
             </div>
 
             <!-- Collect the nav links for toggling -->
@@ -68,15 +68,26 @@
                 <img class="img-responsive web1" src="web1.png">
             </div>
         </div>
-        <div class="row">
-          <div class=" col-md-12 javascript">
+    <div class="row javascriptrow">
+
+    <div class=" col-md-12 ">
+
+        <div class="col-md-4 col-sm-6">
             <h1 id="who" class="jsh1">Javascript Projects</h1>
-            <a href= "tictacindex.html">
-            <img class="imgmid img-responsive" src= "tictactoe.png">
-          </a>
-            </div>
+            <a href="tictacindex.html">
+                <img class="imgmid img-responsive" src="tictactoe.png">
+            </a>
         </div>
-        <div class="row">
+
+        <div class="col-md-4 col-sm-6">
+            <a href="calc.html">
+                <img class="imgmid img-responsive calcpic" src="calc.png">
+            </a>
+        </div>
+
+        </div>
+
+        <!-- <div class="row">
             <div class="col-sm-12">
                 <div class="row">
                     <div class="col-md-4 col-sm-6 colmid">
@@ -93,17 +104,17 @@
             </div>
         </div>
 
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel"> -->
             <!-- Indicators -->
-            <ol class="carousel-indicators">
+            <!-- <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
                 <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
+            </ol> -->
 
             <!-- Wrapper for slides -->
-            <div id="gallery" class="carousel-inner" role="listbox">
+            <!-- <div id="gallery" class="carousel-inner" role="listbox">
                 <div class="item active">
                     <img src="car1.jpg">
                 </div>
@@ -119,10 +130,10 @@
                 <div class="item">
                     <img src="car4.jpg">
                 </div>
-            </div>
+            </div> -->
 
             <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <!-- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
@@ -130,7 +141,8 @@
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
-        </div>
+        </div> -->
+
         <div class="row">
             <div class="col-sm-12">
                 <div class="row">
@@ -194,8 +206,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 bgmap map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13783.520847398782!2d-97.7405441!3d30.2689941!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3c7ccf742ba7769d!2sCapital+Factory!5e0!3m2!1sen!2sus!4v1475112347036" width="70%" height="300px"
-                    frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d440899.73490213486!2d-98.03359109115286!3d30.30746242142474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b599a0cc032f%3A0x5d9b464bd469d57a!2sAustin%2C+TX!5e0!3m2!1sen!2sus!4v1483926986083" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
