--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class=" col-md-12 ">
 
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 #gallery">
             <h1 id="who" class="jsh1">Javascript Projects</h1>
             <a href="tictacindex.html">
                 <img class="imgmid img-responsive" src="tictactoe.png">
@@ -84,64 +84,13 @@
                 <img class="imgmid img-responsive calcpic" src="calc.png">
             </a>
         </div>
-
+        <div class="col-md-4 col-sm-6">
+            <a href="towersindex.html">
+                <img class="imgmid img-responsive calcpic" src="towersofhannoi.png">
+            </a>
         </div>
 
-        <!-- <div class="row">
-            <div class="col-sm-12">
-                <div class="row">
-                    <div class="col-md-4 col-sm-6 colmid">
-                        <img class="imgmid img-responsive" src="css3-logo.png">
-                    </div>
-                    <div class="col-md-4 col-sm-6 colmid">
-                        <img class="imgmid img-responsive" src="HTML5_Logo_512.png">
-                    </div>
-                    <div class="col-md-4 col-sm-12 colmid">
-                        <img class="imgmid img-responsive" src="jslogo.png">
-                    </div>
-
-                </div>
-            </div>
         </div>
-
-        <div id="myCarousel" class="carousel slide" data-ride="carousel"> -->
-            <!-- Indicators -->
-            <!-- <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol> -->
-
-            <!-- Wrapper for slides -->
-            <!-- <div id="gallery" class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="car1.jpg">
-                </div>
-
-                <div class="item">
-                    <img src="car2.jpg">
-                </div>
-
-                <div class="item">
-                    <img src="car3.jpg">
-                </div>
-
-                <div class="item">
-                    <img src="car4.jpg">
-                </div>
-            </div> -->
-
-            <!-- Left and right controls -->
-            <!-- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div> -->
 
         <div class="row">
             <div class="col-sm-12">
@@ -177,10 +126,15 @@
                             <div class="col-md-offset-3 col-md-6 col-sm-12">
                                 <div class="panel panel-default">
                                     <div class="panel-heading">
-                                        <h3 class="panel-title"><i class="fa fa-envelope"></i> CONTACT</h3>
+                                        <h3 class="panel-title"><i class="fa fa-envelope"></i>     </h3>
+                                        <a href="mailto:jordanlmit@gmail.com" class="btn btn-info contactbutton" role="button" target="_blank">CONTACT</a>
+                                        <h3>
+                                          jordanlmit@gmail.com
+                                        </h3>
+
                                     </div>
                                 </div>
-                                <form action="https://docs.google.com/forms/d/e/1FAIpQLSe3sDAyYjM-PzblDekU6jeBg4jAVngyXdvyIaFEuPiboGOW1Q/formResponse" target="_self" method="POST">
+                                <!-- <form action="https://docs.google.com/forms/d/e/1FAIpQLSe3sDAyYjM-PzblDekU6jeBg4jAVngyXdvyIaFEuPiboGOW1Q/formResponse" target="_self" method="POST">
                                     <div class="form-group">
                                         <input type="text" class="form-control" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Email" aria-describedby="i.desc.1136068272 i.err.1136068272" name="entry.1094703442" value="" dir="auto" data-initial-dir="auto" data-initial-value=""
                                             placeholder="example@gmail.com">
@@ -196,7 +150,7 @@
                                                 <input type="hidden" name="pageHistory" value="0">
                                                 <input type="hidden" name="fbzx" value="215932545032260199">
                                                 <input id="submitbutton" type="submit" name="submit" value="Submit" class="btn btn-default btn-lg btn-block btngreen">
-                                </form>
+                                </form> -->
                                 </div>
                             </div>
                         </div>
