--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class=" col-md-12 ">
 
         <div class="col-md-4 col-sm-6 #gallery">
-            <h1 id="who" class="jsh1">Javascript Projects</h1>
+            <h1 id="gallery" class="jsh1">Javascript Projects</h1>
             <a href="tictacindex.html">
                 <img class="imgmid img-responsive" src="tictactoe.png">
             </a>
