--- a/index.html
+++ b/index.html
@@ -54,18 +54,23 @@
     <div class="container-fluid top">
         <div class="row">
             <div id="home" class="col-sm-12 hero">
-                <img class="img-responsive logo" src="logo.png">
+                <img class="img-responsive logo" src="../images/logo.png">
             </div>
         </div>
 
         <div class="row whorow">
             <div class="col-md-8 whoblock">
                 <h1 id="who" class="whoh1">Who</h1>
-                <p class="whop">My name is Jordan Mitchell. I am a front-end developer currently studying at <a href="https://www.austincodingacademy.com/">Austin Coding Academy.</a> I have extensive experience in design and illustration. I am driven to combine elements
-                    of design, with optimal programming.  Excellent understanding of Javascript and Jquery.</p>
+                <p class="whop">My name is Jordan Mitchell. I am a web developer currently studying at <a href="https://www.austincodingacademy.com/">Austin Coding Academy.</a> I have extensive experience in design and illustration.  I am driven to combine elements of design, with optimal programming.  Excellent understanding of Javascript and Jquery.</p>
+                <div class="col-md-6 ">
+                  <img class = "img-responsive" src="../images/icons1.png">
+                </div>
+                <div class="col-md-6 ">
+                  <img class = "img-responsive" src="../images/icons2.png">
+                </div>
             </div>
             <div class="col-md-4 codeimg">
-                <img class="img-responsive web1" src="web1.png">
+                <img class="img-responsive web1" src="../images/web1.png">
             </div>
         </div>
     <div class="row javascriptrow">
@@ -75,18 +80,18 @@
         <div class="col-md-4 col-sm-6 #gallery">
             <h1 id="gallery" class="jsh1">Javascript Projects</h1>
             <a href="tictacindex.html">
-                <img class="imgmid img-responsive" src="tictactoe.png">
+                <img class="imgmid img-responsive" src="../images/tictactoe.png">
             </a>
         </div>
 
         <div class="col-md-4 col-sm-6">
             <a href="calc.html">
-                <img class="imgmid img-responsive calcpic" src="calc.png">
+                <img class="imgmid img-responsive calcpic" src="../images/calc.png">
             </a>
         </div>
         <div class="col-md-4 col-sm-6">
             <a href="towersindex.html">
-                <img class="imgmid img-responsive calcpic" src="towersofhannoi.png">
+                <img class="imgmid img-responsive calcpic" src="../images/towersofhannoi.png">
             </a>
         </div>
 
@@ -98,19 +103,19 @@
                     <div class="col-md-4 col-sm-12 colmidbottom">
                         <h1 class="socialh1">Github </h1>
                         <a href="https://github.com/mordanjitchell" target="_blank">
-                            <img class="imgmid img-responsive" src="github.png">
+                            <img class="imgmid img-responsive" src="../images/github.png">
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12  colmidbottom">
                         <h1 class="socialh13">Linked in</h1>
                         <a href="https://www.linkedin.com/in/jordan-mitchell-84861985" target="_blank">
-                            <img class="imgmid img-responsive" src="linkedinlogo.png">
+                            <img class="imgmid img-responsive" src="../images/linkedinlogo.png">
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12 colmidbottom">
                         <h1 class="socialh12">Instagram </h1>
                         <a href="https://www.instagram.com/jordanmitchelltattoo/?hl=en" target="_blank">
-                            <img class="imgmid img-responsive" src="instagram.png">
+                            <img class="imgmid img-responsive" src="../images/instagram.png">
                         </a>
                     </div>
 
@@ -131,26 +136,8 @@
                                         <h3>
                                           jordanlmit@gmail.com
                                         </h3>
-
                                     </div>
                                 </div>
-                                <!-- <form action="https://docs.google.com/forms/d/e/1FAIpQLSe3sDAyYjM-PzblDekU6jeBg4jAVngyXdvyIaFEuPiboGOW1Q/formResponse" target="_self" method="POST">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Email" aria-describedby="i.desc.1136068272 i.err.1136068272" name="entry.1094703442" value="" dir="auto" data-initial-dir="auto" data-initial-value=""
-                                            placeholder="example@gmail.com">
-                                            <input type="text" class="form-control" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Name" aria-describedby="i.desc.1254863623 i.err.1254863623" name="entry.303918152" value="" dir="auto" data-initial-dir="auto" data-initial-value="" placeholder="Name">
-                                            <input type="text" class="form-control" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Phone Number" aria-describedby="i.desc.1884414053 i.err.1884414053" name="entry.1780696379" value="" dir="auto" data-initial-dir="auto" data-initial-value=""
-                                                placeholder="Phone Number">
-                                                <div class="form-group">
-                                                    <label for="exampleTextarea"></label>
-                                                    <textarea jsname="YPqjbf" class="form-control" rows="5" tabindex="0" aria-label="Comments" jscontroller="gZjhIf" jsaction="input:Lg5SV;ti6hGc:XMgOHc;rcuQ6b:WYd;" name="entry.354535259" dir="auto" data-initial-dir="auto" data-initial-value="" placeholder="Comments"></textarea>
-                                                </div>
-                                                <input type="hidden" name="fvv" value="1">
-                                                <input type="hidden" name="draftResponse" value="[,,&quot;215932545032260199&quot;]">
-                                                <input type="hidden" name="pageHistory" value="0">
-                                                <input type="hidden" name="fbzx" value="215932545032260199">
-                                                <input id="submitbutton" type="submit" name="submit" value="Submit" class="btn btn-default btn-lg btn-block btngreen">
-                                </form> -->
                                 </div>
                             </div>
                         </div>
