--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="col-md-4 codeimg">
-                <img class="img-responsive web1" src="../images/web1.png">
+                <img class="img-responsive web1" src="../images/75a.png">
             </div>
         </div>
     <div class="row javascriptrow">
