foulder structure clean up

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style/style.css">
 
 </head>
 
@@ -61,7 +61,7 @@
         <div class="row whorow">
             <div class="col-md-8 whoblock">
                 <h1 id="who" class="whoh1">Who</h1>
-                <p class="whop">My name is Jordan Mitchell. I am a web developer currently studying at <a href="https://www.austincodingacademy.com/">Austin Coding Academy.</a> I have extensive experience in design and illustration.  I am driven to combine elements of design, with optimal programming.  Excellent understanding of Javascript and Jquery.</p>
+                <p class="whop">My name is Jordan Mitchell. I am a web developer from Austin, TX.  I have extensive experience in design and illustration.  I am driven to combine elements of design, with optimal programming.  Excellent understanding of Javascript and libraries such as React/Redux and Jquery.</p>
                 <div class="col-md-6 ">
                   <img class = "img-responsive" src="../images/icons1.png">
                 </div>
@@ -79,18 +79,18 @@
 
         <div class="col-md-4 col-sm-6 #gallery">
             <h1 id="gallery" class="jsh1">Javascript Projects</h1>
-            <a href="tictacindex.html">
+            <a href="../indexJsFiles/tictacindex.html">
                 <img class="imgmid img-responsive" src="../images/tictactoe.png">
             </a>
         </div>
 
         <div class="col-md-4 col-sm-6">
-            <a href="calc.html">
+            <a href="../indexJsFiles/calc.html">
                 <img class="imgmid img-responsive calcpic" src="../images/calc.png">
             </a>
         </div>
         <div class="col-md-4 col-sm-6">
-            <a href="towersindex.html">
+            <a href="../indexJsFiles/towersindex.html">
                 <img class="imgmid img-responsive calcpic" src="../images/towersofhannoi.png">
             </a>
         </div>
