--- a/indexJsFiles/towersindex.html
+++ b/indexJsFiles/towersindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Towers of Hanoi</title>
-  <link rel="stylesheet" href="towers.style.css" />
+  <link rel="stylesheet" href="../style/towers.style.css" />
 </head>
 <body>
   <div class="title">
@@ -26,6 +26,6 @@
   </div>
   <div id="announce-game-won"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript" src="towers.script.js"></script>
+  <script type="text/javascript" src="../JsFiles/towers.script.js"></script>
 </body>
 </html>
