--- a/indexJsFiles/calc.html
+++ b/indexJsFiles/calc.html
@@ -13,8 +13,7 @@
     <!--owlcarosel-->
     <!--googlefonts-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="calc.css">
-
+    <link rel="stylesheet" href="../style/calc.css">
 </head>
 
 <body>
@@ -105,7 +104,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="calc.js"></script>
+    <script src="../JsFiles/calc.js"> </script>
 </body>
 
 </html>
