--- a/indexJsFiles/tictacindex.html
+++ b/indexJsFiles/tictacindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tic Tac Toe</title>
-  <link rel="stylesheet" href="tictac.css" />
+  <link rel="stylesheet" href="../style/tictac.css" />
 </head>
 <body>
   <div class="bg">
@@ -27,6 +27,6 @@
   <button id="clear">Clear Board</button>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript" src="tictac.js"></script>
+  <script type="text/javascript" src="../JsFiles/tictac.js"></script>
 </body>
 </html>
