--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12 bgmap map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d440899.73490213486!2d-98.03359109115286!3d30.30746242142474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b599a0cc032f%3A0x5d9b464bd469d57a!2sAustin%2C+TX!5e0!3m2!1sen!2sus!4v1483926986083" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <div class="col-sm-12 bgmap map responsive-video">
+                <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d440899.73490213486!2d-98.03359109115286!3d30.30746242142474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b599a0cc032f%3A0x5d9b464bd469d57a!2sAustin%2C+TX!5e0!3m2!1sen!2sus!4v1483926986083" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
